--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +22,27 @@
     <title>tp5-DOM y BOM : Ejercicio01</title>
   </head>
   <body>
-    <main></main>
+    <main
+      class="text-center d-flex flex-column justify-content-center align-self-center"
+    >
+      <div>
+        <button type="button" class="btn btn-outline-light mb-2">
+          Comenzar el juego
+        </button>
+        <p>Se a creado un numero aleatorio! Intenta adivinarlo.</p>
+        <form>
+          <div class="mb-3">
+            <input
+              type="number"
+              class="form-control"
+              id="numero"
+              aria-describedby="emailHelp"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+    </main>
     <script src=""></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
