--- a/index.html
+++ b/index.html
@@ -22,28 +22,37 @@
     <title>tp5-DOM y BOM : Ejercicio01</title>
   </head>
   <body>
-    <main
-      class="text-center d-flex flex-column justify-content-center align-self-center"
-    >
-      <div>
-        <button type="button" class="btn btn-outline-light mb-2">
+    <main>
+      <h1 class="text-center mt-4">As del numero🎮</h1>
+      <div class="d-flex justify-content-center my-4">
+        <button type="button" class="btn btn-outline-warning">
           Comenzar el juego
         </button>
-        <p>Se a creado un numero aleatorio! Intenta adivinarlo.</p>
-        <form>
-          <div class="mb-3">
+      </div>
+      <p class="text-center d-none">
+        Se a generado un numero aleatorio entre 1 y 10, intenta adivinarlo!
+      </p>
+      <div class="d-flex justify-content-center align-items-center">
+        <form id="formEnviar" class="d-flex flex-column align-items-center w-25">
+          <div class="mb-3 w-100 text-center">
+            <label for="numero" class="form-label"
+              >Ingresa el numero</label
+            >
             <input
               type="number"
               class="form-control"
               id="numero"
               aria-describedby="emailHelp"
+              min="1"
+              max="10"
+              required
             />
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
     </main>
-    <script src=""></script>
+    <script src="./js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
