--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         Se a generado un numero aleatorio entre 1 y 10, intenta adivinarlo!
       </p>
       <div class="d-flex justify-content-center align-items-center">
-        <form id="formEnviar" class="d-flex flex-column align-items-center w-25">
+        <form
+          id="formEnviar"
+          class="d-flex flex-column align-items-center w-25"
+        >
           <div class="mb-3 w-100 text-center">
-            <label for="numero" class="form-label"
-              >Ingresa el numero</label
-            >
+            <label for="numero" class="form-label">Ingresa el numero</label>
             <input
               type="number"
               class="form-control"
@@ -51,6 +52,11 @@
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
+      <div class="d-flex justify-content-center d-none my-4">
+          <button type="button" class="btn btn-outline-info">
+            Reiniciar juego
+          </button>
+        </div>
     </main>
     <script src="./js/app.js"></script>
     <script
