--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </head>
   <body>
     <main>
-      <h1 class="text-center mt-4">As del numero🎮</h1>
+      <h1 class="text-center mt-4 estilo">As del numero🎮</h1>
       <div class="d-flex justify-content-center my-4">
         <button type="button" class="btn btn-outline-warning">
           Comenzar el juego
         </button>
       </div>
-      <p class="text-center d-none">
+      <p class="text-center d-none estilo">
         Se a generado un numero aleatorio entre 1 y 10, intenta adivinarlo!
       </p>
       <div class="d-flex justify-content-center align-items-center">
@@ -47,16 +47,17 @@
               min="1"
               max="10"
               required
+              disabled
             />
           </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <button type="submit" class="btn btn-primary disabled">Enviar</button>
         </form>
       </div>
       <div class="d-flex justify-content-center d-none my-4">
-          <button type="button" class="btn btn-outline-info">
-            Reiniciar juego
-          </button>
-        </div>
+        <button type="button" class="btn btn-outline-info">
+          Reiniciar juego
+        </button>
+      </div>
     </main>
     <script src="./js/app.js"></script>
     <script
