--- a/index.html
+++ b/index.html
@@ -23,41 +23,44 @@
   </head>
   <body>
     <main>
-      <h1 class="text-center mt-4 estilo">As del numero🎮</h1>
-      <div class="d-flex justify-content-center my-4">
-        <button type="button" class="btn btn-outline-warning">
-          Comenzar el juego
-        </button>
-      </div>
-      <p class="text-center d-none estilo">
-        Se a generado un numero aleatorio entre 1 y 10, intenta adivinarlo!
-      </p>
-      <div class="d-flex justify-content-center align-items-center">
-        <form
-          id="formEnviar"
-          class="d-flex flex-column align-items-center w-25"
-        >
-          <div class="mb-3 w-100 text-center">
-            <label for="numero" class="form-label">Ingresa el numero</label>
-            <input
-              type="number"
-              class="form-control"
-              id="numero"
-              aria-describedby="emailHelp"
-              min="1"
-              max="10"
-              required
-              disabled
-            />
-          </div>
-          <button type="submit" class="btn btn-primary disabled">Enviar</button>
-        </form>
-      </div>
-      <div class="d-flex justify-content-center d-none my-4">
-        <button type="button" class="btn btn-outline-info">
-          Reiniciar juego
-        </button>
-      </div>
+      <section>
+        <img src="./img/fondo.avif" alt="Es una imagen con numeros a leatorios">
+        <h1 class="text-center mt-4 estilo">🎮As del numero🎮</h1>
+        <div class="d-flex justify-content-center my-4">
+          <button type="button" class="btn btn-outline-warning">
+            Comenzar el juego
+          </button>
+        </div>
+        <p class="text-center d-none estilo">
+          Se a generado un numero aleatorio entre 1 y 10, intenta adivinarlo!
+        </p>
+        <div class="d-flex justify-content-center align-items-center">
+          <form
+            id="formEnviar"
+            class="d-flex flex-column align-items-center w-25"
+          >
+            <div class="mb-3 w-100 text-center">
+              <label for="numero" class="form-label">Ingresa el numero</label>
+              <input
+                type="number"
+                class="form-control"
+                id="numero"
+                aria-describedby="emailHelp"
+                min="1"
+                max="10"
+                required
+                disabled
+              />
+            </div>
+            <button type="submit" class="btn btn-primary disabled">Enviar</button>
+          </form>
+        </div>
+        <div class="d-flex justify-content-center d-none my-4">
+          <button type="button" class="btn btn-outline-info">
+            Reiniciar juego
+          </button>
+        </div>
+      </section>
     </main>
     <script src="./js/app.js"></script>
     <script
