--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
     <title>tp5-DOM y BOM : Ejercicio01</title>
   </head>
   <body>
+    <header>
+      <h1 class="text-center mt-4 estilo">🎮As del numero🎮</h1>
+    </header>
     <main>
       <section>
-        <img src="./img/fondo.avif" alt="Es una imagen con numeros a leatorios">
-        <h1 class="text-center mt-4 estilo">🎮As del numero🎮</h1>
+        <img
+          src="./img/fondo.avif"
+          alt="Es una imagen con numeros a leatorios"
+        />
         <div class="d-flex justify-content-center my-4">
           <button type="button" class="btn btn-outline-warning">
             Comenzar el juego
@@ -52,7 +57,9 @@
                 disabled
               />
             </div>
-            <button type="submit" class="btn btn-primary disabled">Enviar</button>
+            <button type="submit" class="btn btn-primary disabled">
+              Enviar
+            </button>
           </form>
         </div>
         <div class="d-flex justify-content-center d-none my-4">
@@ -62,6 +69,9 @@
         </div>
       </section>
     </main>
+    <footer class="bg-info-subtle">
+      <p class="fs-5 py-4 text-center">&copy;Todos los derechos reservados 2025.</p>
+    </footer>
     <script src="./js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
